--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+construction-image: https://images.unsplash.com/photo-1598511307176-336c51e63cc9?q=80&w=3425&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+description: Homepage of the network Young Digital Humanities in Brandenburg and Berlin
+title: "Young DH Berlin & Brandenburg"
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,13 +14,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <meta property="og:title" content="{{ page.title | strip_html | escape | remove: "-" | strip_newlines}}">
+    <meta property="og:description" content="{{ page.description }}">
+    <meta property="og:image" content="{{site.url}}{{page.construction-image}}">
   </head>
   <body>
     <main>
         <section class="under_construction">
             <div>
             <b>Netzwerk Junge Digital Humanities in Berlin und Brandenburg</b>
-            <img src="https://images.unsplash.com/photo-1598511307176-336c51e63cc9?q=80&w=3425&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"/>
+            <img src={{page.construction-image}}/>
             <!--Photo by <a href="https://unsplash.com/@jupp?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonathan Kemper</a> on <a href="https://unsplash.com/photos/white-tower-near-building-during-daytime-8XI8Oc2Z_TM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
             <span>Under Construction!</span>
             </div>
