--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-construction-image: https://images.unsplash.com/photo-1598511307176-336c51e63cc9?q=80&w=3425&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+construction-image: /assets/img/jonathan-kemper-8XI8Oc2Z_TM-unsplash.jpg
 description: Homepage of the network Young Digital Humanities in Brandenburg and Berlin
 title: "Young DH Berlin & Brandenburg"
 ---
@@ -16,7 +16,7 @@ title: "Young DH Berlin & Brandenburg"
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <meta property="og:title" content="{{ page.title | strip_html | escape | remove: "-" | strip_newlines}}">
     <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="{{page.construction-image}}">
+    <meta property="og:image" content="{{site.url}}{{page.construction-image}}">
   </head>
   <body>
     <main>
