--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: "Young DH Berlin & Brandenburg"
         <section class="under_construction">
             <div>
             <b>Netzwerk Junge Digital Humanities in Berlin und Brandenburg</b>
-            <img src={{site.url}}{{page.construction-image}}/>
+            <img src="{{site.url}}{{page.construction-image}}">
             <!--Photo by <a href="https://unsplash.com/@jupp?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonathan Kemper</a> on <a href="https://unsplash.com/photos/white-tower-near-building-during-daytime-8XI8Oc2Z_TM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
             <span>Under Construction!</span>
             </div>
