--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ title: "Young DH Berlin & Brandenburg"
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <meta property="og:title" content="{{ page.title | strip_html | escape | remove: "-" | strip_newlines}}">
     <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="{{site.url}}small.jpg">
+    <meta property="og:image" content="{{site.url}}/assets/img/small.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="640">
+    <meta property="og:image:height" content="512">
   </head>
   <body>
     <main>
