update index title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 construction-image: /assets/img/jonathan-kemper-8XI8Oc2Z_TM-unsplash.jpg
-description: Homepage of the network Young Digital Humanities in Brandenburg and Berlin
-title: "Young DH Berlin & Brandenburg"
+description: Homepage des Netzwerks Junge Digital Humanities in Berlin und  Brandenburg
+title: "Junge Digital Humanities in Berlin & Brandenburg"
 ---
 <!DOCTYPE html>
 <html lang="en">
