--- a/index.html
+++ b/index.html
@@ -1,36 +1,79 @@
 ---
 construction-image: /assets/img/jonathan-kemper-8XI8Oc2Z_TM-unsplash.jpg
-description: Homepage des Netzwerks Junge Digital Humanities in Berlin und  Brandenburg
+description: Homepage des Netzwerks Junge Digital Humanities in Berlin und Brandenburg
 title: "Junge Digital Humanities in Berlin & Brandenburg"
 ---
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Junge DH Berlin und Brandenburg</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <meta property="og:title" content="{{ page.title | strip_html | escape | remove: "-" | strip_newlines}}">
-    <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="{{site.url}}/assets/img/small.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="640">
-    <meta property="og:image:height" content="512">
-  </head>
-  <body>
-    <main>
-        <section class="under_construction">
-            <div>
-            <b>Netzwerk Junge Digital Humanities in Berlin und Brandenburg</b>
-            <img src="{{site.url}}{{page.construction-image}}">
-            <!--Photo by <a href="https://unsplash.com/@jupp?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jonathan Kemper</a> on <a href="https://unsplash.com/photos/white-tower-near-building-during-daytime-8XI8Oc2Z_TM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
-            <span>Under Construction!</span>
-            </div>
-        </section>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Junge DH Berlin und Brandenburg</title>
+  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <meta property="og:title" content="{{ page.title | strip_html | escape | remove: " -" | strip_newlines}}">
+  <meta property="og:description" content="{{ page.description }}">
+  <meta property="og:image" content="{{site.url}}/assets/img/small.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="640">
+  <meta property="og:image:height" content="512">
+</head>
+
+<body>
+  <!-- Overlapping background images for horizontal blend -->
+  <img class="bg-left"
+    src="https://images.unsplash.com/photo-1742732529116-f4011fc94b90?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    alt="Left background" />
+  <img class="bg-right"
+    src="https://images.unsplash.com/photo-1566404791232-af9fe0ae8f8b?q=80&w=1036&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    alt="Right background" />
+  <main>
+    <header class="teal-card">
+  <img class="header-svg" src="/assets/img/roystonlodge-Hex-Grid-for-Role-Playing-Game-Maps.svg" alt="hex grid background" aria-hidden="true">
+    <h1 id="main-heading">Junge Digital Humanities in Berlin & Brandenburg</h1>
+    <h2 id="sub-heading">Netzwerk für Early Career Researchers</h2>
+    <br>
+    </header>
+    <h3>Kommende Veranstaltungen:</h3>
+    <!-- Loop through events and display them -->
+    {%assign upcoming-events = site.data.events.main_events | where_exp: "item", "item.date > site.time" %}
+    {% for item in upcoming-events %}
+    <div class="glass-card">
+      <h4>{{ item.title }}</h4>
+      <p><strong>Datum:</strong> {{ item.date | date: "%d.%m.%Y" }}</p>
+      <p><strong>Ort:</strong> {{ item.location }}</p>
+      <p>{{ item.registration_note }}</p>
+      {% if item.link %}
+      <p><a href="{{ item.link }}" target="_blank" rel="noopener">Weitere Informationen</a></p>
+      {% endif %}
+    </div>
+    {% endfor %}
+    <h3>Vergangene Veranstaltungen:</h3>
+    <!-- Loop through past events and display them -->
+    {%assign past-events = site.data.events.main_events | where_exp: "item", "item.date < site.time" | reverse %} {% for
+      item in past-events%} <div class="glass-card grey-card">
+      <h4>{{ item.title }}</h4>
+      <p><strong>Datum:</strong> {{ item.date | date: "%d.%m.%Y" }}</p>
+      <p><strong>Ort:</strong> {{ item.location }}</p>
+      <p>{{ item.registration_note }}</p>
+      {% if item.link %}
+      <p><a href="{{ item.link }}" target="_blank" rel="noopener">Weitere Informationen</a></p>
+      {% endif %}
+      </div>
+      {% endfor %}
+      <!--
+    <div class="glass-card">
+      <h2>Glassmorphism</h2>
+      <p>This is a semi-transparent glass effect!</p>
+    </div>
+    -->
+  </main>
+</body>
+
 </html>
