--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: "Junge Digital Humanities in Berlin & Brandenburg"
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Junge DH Berlin und Brandenburg</title>
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -34,7 +34,7 @@ title: "Junge Digital Humanities in Berlin & Brandenburg"
     src="https://images.unsplash.com/photo-1566404791232-af9fe0ae8f8b?q=80&w=1036&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
     alt="Right background" />
   <main>
-    <header class="teal-card">
+    <header class="white-card">
   <img class="header-svg" src="/assets/img/roystonlodge-Hex-Grid-for-Role-Playing-Game-Maps.svg" alt="hex grid background" aria-hidden="true">
     <h1 id="main-heading">Junge Digital Humanities in Berlin & Brandenburg</h1>
     <h2 id="sub-heading">Netzwerk für Early Career Researchers</h2>
