--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: "Junge Digital Humanities in Berlin & Brandenburg"
     alt="Right background" />
   <main>
     <header class="white-card">
-  <img class="header-svg" src="/assets/img/roystonlodge-Hex-Grid-for-Role-Playing-Game-Maps.svg" alt="hex grid background" aria-hidden="true">
+  <img class="header-svg" src="{{ site.url}}/assets/img/roystonlodge-Hex-Grid-for-Role-Playing-Game-Maps.svg" alt="hex grid background" aria-hidden="true">
     <h1 id="main-heading">Junge Digital Humanities in Berlin & Brandenburg</h1>
     <h2 id="sub-heading">Netzwerk für Early Career Researchers</h2>
     <br>
