Add mailing list link button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ title: "Junge Digital Humanities in Berlin & Brandenburg"
     <h2 id="sub-heading">Netzwerk für Early Career Researchers</h2>
     <br>
     </header>
+    <div class="center">
+    <a class="mailing-list-button" href="https://www.listserv.dfn.de/sympa/subscribe/junge_dh_berlin-brandenburg?previous_action=info"
+      target="_blank" rel="noopener">Mailingliste abonnieren</a></div>
     <h3>Kommende Veranstaltungen:</h3>
     <!-- Loop through events and display them -->
     {%assign upcoming-events = site.data.events.main_events | where_exp: "item", "item.date > site.time" %}
